--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "request": "launch",
             "mainClass": "Main",
             "projectName": "Algorithmics_AE_cfe34ee8",
-            "args": "wordladder/words5.txt daddy scamp"
+            "args": "wordladder/words5.txt forty fifty"
         }
     ]
 }
