--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,20 +4,32 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "java",
-            "name": "Current File",
+            "name": "Main",
             "request": "launch",
-            "mainClass": "${file}"
+            "mainClass": "Algo_lab_files.Main",
+            "projectName": "Algorithmics_AE_cfe34ee8",
+            "args": "Algo_lab_files/input.txt output.txt",
+            "cwd": "${workspaceFolder}/src"
         },
         {
             "type": "java",
             "name": "Main",
             "request": "launch",
-            "mainClass": "Main",
+            "mainClass": "dijkstra.Main",
             "projectName": "Algorithmics_AE_cfe34ee8",
-            "args": "wordladder/words5.txt forty fifty"
-        }
+            "args": "dijkstra/words5.txt forty fifty",
+            "cwd": "${workspaceFolder}/src"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "wordladder.Main",
+            "projectName": "Algorithmics_AE_cfe34ee8",
+            "args": "wordladder/words5.txt forty fifty",
+            "cwd": "${workspaceFolder}/src"
+        },
     ]
 }
